# Fyurr-Artist-Venue-booking-site

./: .gitignore  README.md  app.py  config.py  forms.py  models.py  requirements.txt  setup.cfg
migrations/versions/: 00b0b3028d11_.py  72329dbdb48e_.py  a54b235db566_initialal_migration.py  c8b0c26f04b4_initial_db_migration.py  f1150c28f8e7_changes_venue_website_link_to_venue_.py
services/: constants.py  shows_decorators.py  validators.py
templates/pages/: search_shows.html  show.html
