[metadata]
name = Fyurr Booking Site
version = 1.0.0
author = Rodrick Calvin Wamala
description = This is a booking site for artists and venues with a database backend setup. It is a project for the Udacity Full Stack Nanodegree.


[pytest]
pep8maxlinelength = 99


[flake8]
ignore = D203
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
max-complexity = 10